--- a/META.yml
+++ b/META.yml
@@ -3,9 +3,12 @@ abstract: 'Talks and projects by Barcelona.pm'
 author:
   - 'Alex Muntada <alexm@cpan.org>'
 build_requires:
+  ExtUtils::MakeMaker: 6.42
   Test::More: 0
+configure_requires:
+  ExtUtils::MakeMaker: 6.42
 distribution_type: module
-generated_by: 'Module::Install version 0.77'
+generated_by: 'Module::Install version 0.91'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -21,4 +24,5 @@ requires:
   DateTime::Set: 0
 resources:
   license: http://dev.perl.org/licenses/
-version: 0.02
+  repository: http://github.com/alexm/acme-pm-barcelona.git
+version: 0.03
